<resources>
    <string name="app_name">Gauss Calculator</string>

    <!-- System messages -->
    <string name="expression_error">ERROR</string>

    <!-- Keyboard message -->
    <string name="display_expression">0</string>
    <string name="display_result">= 0</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_dot">.</string>
    <string name="btn_clear">AC</string>
    <string name="btn_delete">⇐</string>
    <string name="btn_exponent">^</string>
    <string name="btn_division">÷</string>
    <string name="btn_multiplication">×</string>
    <string name="btn_subtraction">-</string>
    <string name="btn_addition">+</string>
    <string name="btn_res">=</string>

</resources>